@@ -16,6 +16,8 @@
 - Add support for connection_messages config option.
 - mosquitto_sub will now refuse to run if the -c option (disable clean session)
   is given and no client id is provided.
+- mosquitto_pub now gives more useful error messages on invalid input or other
+  error conditions.
 - Fix Python will_set() true/True typo.
 - Fix messages to topic "a/b" incorrectly matching on a subscription "a" if
   another subscription "a/#" exists.
